tests/machine/x/lua/substring_builtin.error
line 21: run error: exit status 1
lua: /workspace/mochi/tests/machine/x/lua/substring_builtin.lua:21: attempt to call a nil value (global 'substring')
stack traceback:
	/workspace/mochi/tests/machine/x/lua/substring_builtin.lua:21: in main chunk
	[C]: in ?

